--- a/1.html
+++ b/1.html
@@ -14,12 +14,10 @@
 
     <div class="bg-white p-6 rounded shadow">
       <p class="mb-2"><strong>Connected Wallet:</strong> <span id="walletAddress">Not Connected</span></p>
-
-      <div class="flex justify-between space-x-2 mb-4">
-        <button onclick="connectWallet()" id="connectBtn" class="bg-green-500 text-white px-4 py-2 rounded w-1/2">Connect</button>
-        <button onclick="disconnectWallet()" id="disconnectBtn" class="bg-red-500 text-white px-4 py-2 rounded w-1/2" disabled>Disconnect</button>
+      <div class="flex justify-between mb-4">
+        <button onclick="connectWallet()" class="bg-green-500 text-white px-4 py-2 rounded">Connect</button>
+        <button onclick="disconnectWallet()" class="bg-red-500 text-white px-4 py-2 rounded">Disconnect</button>
       </div>
-
       <input type="text" id="referrer" placeholder="Referrer Address" class="border p-2 w-full mb-4">
       <button onclick="register()" class="bg-blue-500 text-white px-4 py-2 rounded w-full">Join System</button>
     </div>
@@ -68,8 +66,6 @@
         account = accounts[0];
         document.getElementById("walletAddress").innerText = account;
         contract = new web3.eth.Contract(CONTRACT_ABI, CONTRACT_ADDRESS);
-        document.getElementById("connectBtn").disabled = true;
-        document.getElementById("disconnectBtn").disabled = false;
       } else {
         alert("Install MetaMask");
       }
@@ -78,20 +74,28 @@
     function disconnectWallet() {
       account = null;
       document.getElementById("walletAddress").innerText = "Not Connected";
-      document.getElementById("connectBtn").disabled = false;
-      document.getElementById("disconnectBtn").disabled = true;
     }
 
     async function register() {
       document.getElementById("status").innerText = "Registering...";
-      // TODO: Connect to smart contract register method
-      setTimeout(() => {
-        document.getElementById("status").innerText = "Registration successful.";
-      }, 1000);
+      try {
+        const referrer = document.getElementById("referrer").value;
+        if (!web3.utils.isAddress(referrer)) {
+          throw new Error("Invalid referrer address");
+        }
+
+        // Replace with actual register call when ABI includes it
+        // Example: await contract.methods.register(referrer).send({ from: account });
+
+        document.getElementById("status").innerText = "Registration request sent to MetaMask.";
+      } catch (error) {
+        console.error(error);
+        document.getElementById("status").innerText = "Registration failed: " + error.message;
+      }
     }
 
     window.onload = () => {
-      // optional auto-connect logic can go here
+      connectWallet();
     };
   </script>
 </body>
